# yt-transcript-web

./: .gitignore  CHANGELOG.md  Format Data for Excel.md  KOYEB_MIGRATION.md  LICENSE  PROJECT_SPEC.md  README.md  SOURCE_OF_TRUTH.md  SPEC.md  decompress_db.py  execution_output.txt  koyeb-compose.yaml  proxy_checker.py  pyproject.toml  results.txt  test-ai-features.py  wrangler.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: deploy.yml  feature-protection.yml
backend/: .env.example  Dockerfile  README.md  ip_providers.py  main.py  proxy_lib.py  proxy_lib_async.py  pyproject.toml  render.yaml  requirements.txt  youtube_cookies.txt
backend/app/: __init__.py  cli.py  logging_config.py  main.py  mcp_proxy.py  mcp_server.py  middleware.py  models.py  transcript_service.py
backend/tests/: test_main.py  test_transcript_service.py
deploy/: docker-compose.yml  install.sh  nginx.conf  status.sh  yt-transcript.service
docs/: CLI-Comparison-Report.md  COUNCIL_REVIEW.md  FACTORY_GUIDELINES.md  MCP_README.md
frontend/: .env.example  .env.production  README.md  fix_jsx.py  index.html  lint_output.txt  package-lock.json  package.json  stitch_design.html  tailwind.config.js  wrangler.toml
frontend/assets/brand/: brand.css
frontend/src/: App.jsx  App_backup.jsx  index.css
frontend/src/components/: BrandIcon.jsx  EmptyState.jsx  ErrorToast.jsx  Footer.jsx  Hero.jsx  MCPCopyBlock.jsx  MCPIntegration.jsx  MCPPlatformCard.jsx  ProgressBar.jsx  RiskBadge.jsx  StatCard.jsx  (+5 more)
plans/: tracking-error-fix-plan.md
projects/yt-transcript-web/: CHANGELOG.md  SPEC.md  TODO.md
tests/: conftest.py  test_cli.py  test_core.py  test_mcp_proxy.py  test_proxy_config.py
(+5 files in other folders)
