[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-transcript-mcp"
version = "0.1.0"
description = "YouTube Transcript MCP Server and CLI"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Sam Ade"}
]
keywords = ["youtube", "transcript", "mcp", "cli"]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.28.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
yt-transcript = "backend.app.cli:main"
yt-transcript-mcp = "backend.app.mcp_server:main"
yt-transcript-proxy = "backend.app.mcp_proxy:main"
