[project]
name = "yt-transcript-web"
version = "1.2.0"
description = "YouTube Transcript API + MCP — extract, analyze, and search YouTube transcripts"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "uvloop>=0.21.0",
    "httpx>=0.27.0",
    "youtube-transcript-api>=1.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
proxy = ["yt-dlp>=2024.1.1"]
mcp = ["mcp>=1.0.0"]

[project.scripts]
yt-transcript-proxy = "app.mcp_proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
